NINE-438 corrected hero btn

--- a/locales/fr_ca.json
+++ b/locales/fr_ca.json
@@ -9,7 +9,7 @@
     "logIn" : "Log in",
     "joinNow" : "Adhérez maintenant",
     "deposit" : "Dépôt",
-    "depositNow" : "Déposer maintenant",
+    "depositNow" : "Dépôt",
     "loadMoreGames" : "Charger plus de jeux",
     "playForFun" : "Jouez pour le plaisir ",
     "playNow" : "Jouez maintenant",
