--- a/locales/de.json
+++ b/locales/de.json
@@ -27,7 +27,10 @@
     "save" : "Speichern",
     "edit" : "Bearbeiten",
     "getBonus" : "Bonus erhalten",
-    "more": "Mehr "
+    "more": "Mehr",
+    "checkBonuses": "Check bonuses",
+    "cancelBonus": "Cancel bonus",
+    "goBack": "Go back"
   },
   "errors" : {
     "required" : "Pflichtangabe",
@@ -58,7 +61,12 @@
     "playGame" : "Jetzt können Sie das Spiel spielen",
     "cantStart" : "Das Spiel kann nicht gestartet werden",
     "pleaseDeposit" : "Bitte erst einzahlen",
-    "pleaseDepositText" : "Es ist schade, aber Ihr Guthaben ist 0. Jetzt einzahlen!!"
+    "pleaseDepositText" : "Es ist schade, aber Ihr Guthaben ist 0. Jetzt einzahlen!!",
+    "wait": "Hey wait!",
+    "lockedByBonus": "There are still active bonuses on your account. In this case, the withdrawals are unavailable. Please check your profile and cancel all of them to make withdrawals.",
+    "nullBalance": "Unfortunately, you can't make a withdrawal. You have no funds in your account",
+    "loseBonus": "You’ve got an active bonus! If you cancel it, you will lose {amount} bonus money.",
+    "isSure": "Are you sure?"
   },
   "auth" : {
     "loginTitle" : "Willkommen zurück  ",
@@ -146,7 +154,8 @@
     "active" : "Aktiv",
     "disabled" : "Deaktiviert",
     "left" : "Links",
-    "yes" : "ja ",
+    "yes" : "Ja",
+    "no": "Nein",
     "email" : "E-Mail-Adresse",
     "wager" : "Umsatzanforderung",
     "created" : "geschaffen",
