--- a/locales/de.json
+++ b/locales/de.json
@@ -64,7 +64,7 @@
     "pleaseDepositText" : "Es ist schade, aber Ihr Guthaben ist 0. Jetzt einzahlen!!",
     "wait": "Halt, Stop!",
     "lockedByBonus": "Es sind noch laufende Boni auf Ihrem Konto. In diesem Fall ist keine Abhebung möglich. Bitte prüfen Sie Ihr Konto und annullieren Sie die \nBoni, um abheben zu können.",
-    "nullBalance": "Unfortunately, you can't make a withdrawal. You have no funds in your account",
+    "nullBalance": "Sie können leider keine Abhebung vornehmen. Ihr Konto weist kein Guthaben auf.",
     "loseBonus": "Sie verfügen über einen gültigen Bonus! Wenn Sie ihn ablehnen, verlieren Sie {amount} Bonusgeld.",
     "isSure": "Sind Sie sicher?"
   },
